--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "body-parser": "^1.19.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "googleapis": "^92.0.0"
