--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "startlocal": "HOST=0.0.0.0 node dist/index.js",
     "webpack": "webpack --config webpackdev.config.ts --watch",
     "build": "webpack"
   },
