--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "5.1.7",
+    "@types/react-swipeable-views": "^0.13.1",
     "i18next": "^21.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
